--- a/views/admin_dashboard.html
+++ b/views/admin_dashboard.html
@@ -99,7 +99,7 @@
                         <a class="nav-link text-white" href="#">Quản lý tài khoản</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Thống kê</a>
+                        <a class="nav-link text-white" href="/views/thongke.html">Thống kê</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown"
