--- a/views/Register.html
+++ b/views/Register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/Stylesheet/style.css">
     <link rel="stylesheet" href="/Stylesheet/font.css">
@@ -95,19 +95,27 @@
 <script>
 
     $('#user_name').focus()
-
+    
+    var users = JSON.parse(localStorage.getItem('users'));
+    console.log(users);
+    users = []
+    if(users.length == 0 ){
+        users.push( {   
+        username: "admin",
+        password: "111"
+        })
+    localStorage.setItem('users', JSON.stringify(users));// Lưu mảng users vào localStorage
+    }
     function register() {
         if (validate()) {
-
             // Kiểm tra xem mảng user đã tồn tại trong localStorage chưa
-            var users = localStorage.getItem('users');
-            if (!users) {
-                // Nếu mảng user chưa tồn tại, tạo một mảng mới và lưu vào localStorage
-                users = [];
-            } else {
-                // Nếu mảng user đã tồn tại, chuyển đổi từ chuỗi JSON sang mảng JavaScript
-                users = JSON.parse(users);
-            }
+            // if (!users) {
+            //     // Nếu mảng user chưa tồn tại, tạo một mảng mới và lưu vào localStorage
+            //     users = [];
+            // } else {
+            //     // Nếu mảng user đã tồn tại, chuyển đổi từ chuỗi JSON sang mảng JavaScript
+            //     users = JSON.parse(users);
+            // }
             if (users.find(user => user.username === $('#user_name').val())) {
                 Swal.fire({
                     position: "center",
@@ -134,7 +142,9 @@
                 showConfirmButton: true,
                 timer: 1500
             }).then((result) => {
+            // window.location.href= 'login.html'
                 $('input').val('')
+                // window.location.href='login.html'
             });
 
 
